bump example plugins to latest versions of Scala and Java